[fix] word wrap

--- a/packages/styles/scss/components/_aside-list.scss
+++ b/packages/styles/scss/components/_aside-list.scss
@@ -104,6 +104,8 @@
           max-width: 120px;
           text-overflow: ellipsis;
           overflow: hidden;
+          word-break: break-all;
+          white-space: pre;
         }
       }
 
